--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-hooks": "^1.0.1",
+    "react-loading-screen": "^0.0.17",
     "react-scripts": "^5.0.1",
     "tailwindcss": "^3.3.6",
     "web-vitals": "^2.1.4"
